--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>treeview-saas</groupId>
     <artifactId>admin-template-starter</artifactId>
-    <version>1.0.0</version>
+    <version>0.9.0</version>
     <packaging>war</packaging>
 
     <properties>
@@ -42,6 +42,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -111,7 +115,7 @@
         <dependency>
             <groupId>net.mingsoft</groupId>
             <artifactId>shiro-freemarker-tags</artifactId>
-            <version>0.1</version>
+            <version>1.0.3</version>
         </dependency>
     </dependencies>
 
@@ -169,13 +173,6 @@
 
         <resources>
             <resource>
-                <directory>src/main/resources</directory>
-                <filtering>false</filtering>
-                <includes>
-                    <include>**/*.*</include>
-                </includes>
-            </resource>
-            <resource>
                 <directory>src/main/resources/static</directory>
                 <targetPath>META-INF/static</targetPath>
                 <filtering>true</filtering>
@@ -203,48 +200,16 @@
                     <include>**/*.ico</include>
                 </includes>
             </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+                <excludes>
+                    <exclude>static/**/*.*</exclude>
+                </excludes>
+            </resource>
         </resources>
     </build>
-
-    <profiles>
-        <profile>
-            <id>prod</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.github.bringking</groupId>
-                        <artifactId>requirejs-maven-plugin</artifactId>
-                        <version>2.0.4</version>
-                        <executions>
-                            <execution>
-                                <phase>generate-sources</phase>
-                                <goals>
-                                    <goal>optimize</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <configFile>
-                                src/main/resources/build/buildConfig.js
-                            </configFile>
-                            <optimizerFile>
-                                src/main/resources/build/r.js
-                            </optimizerFile>
-                            <optimizerParameters>
-                            </optimizerParameters>
-                            <filterConfig>
-                                true
-                            </filterConfig>
-                            <skip>
-                                false
-                            </skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
