--- a/src/main/resources/envs/test/config.properties
+++ b/src/main/resources/envs/test/config.properties
@@ -19,3 +19,6 @@ spring.freemarker.expose-spring-macro-helpers=true
 
 spring.root.context=static
 spring.messages.basename=i18n/messages
+
+admin.template.enterprise=趣味科技
+admin.template.locale=zh_CN
