--- a/src/main/resources/envs/test/jdbc.properties
+++ b/src/main/resources/envs/test/jdbc.properties
@@ -7,7 +7,7 @@ spring.datasource.dynamic.datasource.master.type=com.alibaba.druid.pool.DruidDat
 spring.datasource.dynamic.datasource.master.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.dynamic.datasource.master.url=jdbc:mysql://localhost:3307/ruoyi?useUnicode=true&characterEncoding=utf-8&autoReconnect=true&autoReconnectForPools=true&failOverReadOnly=false&rewriteBatchedStatements=true&allowMultiQueries=true
 spring.datasource.dynamic.datasource.master.username=root
-spring.datasource.dynamic.datasource.master.password=Linghe38
+spring.datasource.dynamic.datasource.master.password=123456
 spring.datasource.dynamic.datasource.master.druid.initialSize=5
 spring.datasource.dynamic.datasource.master.druid.minIdle=10
 spring.datasource.dynamic.datasource.master.druid.maxActive=20
